--- a/view/site-config/admin/show/default.phtml
+++ b/view/site-config/admin/show/default.phtml
@@ -1,4 +1,5 @@
-<?= $this->partial('site-config/partials/admin-menu.phtml') ?>
+<?php $viewModel = $this->viewModel()->getCurrent(); ?>
+<?= $this->partial('site-config/partials/admin-menu.phtml', ['scopes' => $viewModel->getScopes(), 'viewModel' => $viewModel]) ?>
 
 <section class="content">
     <div class="row">
