--- a/view/site-config/partials/admin-menu.phtml
+++ b/view/site-config/partials/admin-menu.phtml
@@ -4,12 +4,17 @@
             <a class="navbar-brand" href="#"><i class="fa fa-cogs"></i> Site config</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Scope 1</a></li>
-                <li><a href="#">Scope 2</a></li>
-                <li><a href="#">Scope 3</a></li>
-            </ul>
-        </div>
+        <?php if ($this->scopes->count() > 0): ?>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Scope 1</a></li>-->
+                    <?php foreach($this->scopes as $scope): ?>
+                        <li <?=$this->viewModel->determineActiveForScope($scope)?>>
+                            <a href="<?=$this->url('site-config-admin-show', [], ['query' => ['scope'=>$scope->getName()]]);?>"><?=$scope->getName()?></a>
+                        </li>
+                    <?php endforeach; ?>
+                </ul>
+            </div>
+        <?php endif; ?>
     </nav>
 </section>
