--- a/view/site-config/admin/show/default.phtml
+++ b/view/site-config/admin/show/default.phtml
@@ -1,63 +1,17 @@
 <?php $viewModel = $this->viewModel()->getCurrent(); ?>
-<?= $this->partial('site-config/partials/admin-menu.phtml', ['scopes' => $viewModel->getScopes(), 'viewModel' => $viewModel]) ?>
+<?= $this->partial('site-config/partials/admin-menu.phtml',
+    ['scopes' => $viewModel->getScopes(), 'viewModel' => $viewModel]) ?>
 
 <section class="content">
     <div class="row">
         <div class="col-md-12">
             <div class="box box-solid">
                 <div class="box-body">
-
                     <form role="form">
-
-                        <div class="form-group">
-                            <label>Text</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Text</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Text</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Text</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Text</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
-                                </span>
-                            </div>
-                        </div>
+                        <?php foreach($viewModel->getValues() as $value): ?>
+                            <?= $this->partial('site-config/partials/admin-config-value.phtml',
+                                ['label' => $value->getName(), 'value' => $value->getValue()]) ?>
+                        <?php endforeach; ?>
                     </form>
                 </div>
             </div>
