--- a/view/site-config/partials/admin-menu.phtml
+++ b/view/site-config/partials/admin-menu.phtml
@@ -1,7 +1,7 @@
 <section class="content-header">
     <nav class="module navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><i class="fa fa-cogs"></i> Site config</a>
+            <a class="navbar-brand" href="<?=$this->url('site-config-admin-show');?>"><i class="fa fa-cogs"></i> Site config</a>
         </div>
 
         <?php if ($this->scopes->count() > 0): ?>
