--- a/view/site-config/admin/show/default.phtml
+++ b/view/site-config/admin/show/default.phtml
@@ -1,3 +1,5 @@
+<?php $this->headScript()->appendFile($this->basePath() . '/adm/js/site-config/show.js');?>
+
 <?php $viewModel = $this->viewModel()->getCurrent(); ?>
 <?= $this->partial('site-config/partials/admin-menu.phtml',
     ['scopes' => $viewModel->getScopes(), 'viewModel' => $viewModel]) ?>
