--- a/view/site-config/partials/admin-config-value.phtml
+++ b/view/site-config/partials/admin-config-value.phtml
@@ -1,7 +1,7 @@
 <div class="form-group">
-    <label><?=$this->label;?></label>
+    <label><?=$this->name;?></label>
     <div class="input-group">
-        <input type="text" class="form-control" value="<?=$this->value;?>">
+        <input type="text" class="form-control" name="<?=$this->name;?>" value="<?=$this->value;?>">
         <span class="input-group-btn">
             <button type="button" class="btn btn-info btn-flat"><i class="fa fa-save"></i> Save</button>
         </span>
